# cloud-native-gauntlet

./: .drone.yml  .gitignore  Vagrantfile  apply.sh  deploy.sh  docker-compose.yml  hosts  setup-vm-dns.sh
.github/workflows/: build-push.yaml
ansible/: hosts.ini  provision.yaml  site.yml
ansible/files/: k3s-offline.sh
ansible/group_vars/: all.yml
argocd/apps/: cnpg-operator.yaml  gitea.yaml  keycloak.yaml  root-application.yaml  todo-app.yaml
argocd/projects/: default.yaml
charts/gitea/: Chart.yaml  values.yaml
charts/gitea/templates/: NOTES.txt  cnpg-cluster.yaml  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
charts/keycloak/: Chart.yaml  values.yaml
charts/keycloak/templates/: NOTES.txt  cnpg-cluster.yaml  deployment.yaml  ingress.yaml  secret-admin.yaml  secret-db.yaml  service.yaml
charts/todo-app/: Chart.yaml  values.yaml
charts/todo-app/templates/: deployment.yaml  ingress.yaml
examples/drone-workflows/: .drone.yml  simple-pipeline.yml
helm/argo-cd/: values.yaml
helm/argocd/: infra-app.yaml
helm/cnpg-operator/: Chart.yaml  values.yaml
helm/cnpg-operator/templates/: crds.yaml  operator.yaml  rbac.yaml  serviceaccount.yaml
helm/drone/: values.yaml
helm/drone-runner-kube/: values.yaml
helm/gitea/: Chart.yaml  values.yaml
helm/gitea/templates/: 01_storageclass.yaml  02_persistentvolume.yaml  03_cnpg_postgres_cluster.yaml  04_db_secret.yaml  05_cnpg_postgres_service.yaml  06_gitea_deployment.yaml  06_gitea_pvc.yaml  (+6 more)
helm/keycloak/: Chart.yaml  values.schema.json  values.yaml
helm/todo-app/: Chart.yaml  values.yaml
scripts/: bootstrap-gitops.sh  install_prerequisites.sh  prepare-offline-images.sh  setup-argocd-drone.sh  setup-drone.sh  setup-environment.sh  setup-gitops-repos.sh  setup-keycloak.sh
terraform/: config  group_vars.tpl  inventory.tpl  kubeconfig  main.tf
terraform/workloads/: main.tf
todo_app/: Cargo.toml  Dockerfile  docker-compose.yml  env.example
todo_app/migrations/: 20250901174713_create_tasks_table.sql  20250912190000_alter_user_id_to_text.sql  20250912190000_create_tasks_table.sql
todo_app/src/: db.rs  handlers.rs  main.rs  models.rs
(+32 files in other folders)
